# PathRender

./: .gitignore  CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt  main.cpp
include/: PathRender.hpp
include/PathRender/core/: AnisotropicMatteBRDF.hpp  BRDF.hpp  DieletricBRDF.hpp  HitRecord.hpp  PhongBRDF.hpp  ScatterRecord.hpp  color.hpp  export.hpp  light.hpp  material.hpp  matrix.hpp  point.hpp  ray.hpp  vector.hpp
include/PathRender/objects/: mesh.hpp  objects.hpp  plane.hpp  sphere.hpp  triangle.hpp
include/PathRender/rendering/: IRenderAlgorithm.hpp  PathTracer.hpp  RayCast.hpp  SingleColor.hpp
include/PathRender/scene/: camera.hpp  obj_parser.hpp  scene.hpp  scene_config.hpp  scene_parser.hpp  yaml_parser.hpp
include/PathRender/utils/: filesystem_utils.hpp  math_utils.hpp
scenes/: cornell_box.yaml  cornell_caustics.yaml  cornell_spheres.yaml  simple_scene.yml
src/: CMakeLists.txt
src/core/: AnisotropicMatteBRDF.cpp  DieletricBRDF.cpp  PhongBRDF.cpp  color.cpp  light.cpp  point.cpp  ray.cpp  vector.cpp
src/objects/: mesh.cpp  plane.cpp  sphere.cpp  triangle.cpp
src/rendering/: PathTracer.cpp  RayCast.cpp  SingleColor.cpp
src/scene/: camera.cpp  obj_parser.cpp  scene.cpp  scene_parser.cpp  yaml_parser.cpp
src/utils/: filesystem_utils.cpp  math_utils.cpp
